[package]
name = "http_unix_client"
version = "0.1.0"
description = "A minimal async HTTP client over Unix sockets, inspired by reqwest"
keywords = ["http", "request", "client", "unix", "unix socket"]
categories = ["network-programming", "asynchronous"]
repository = "https://github.com/edgar-linton/http_unix_client"
documentation = "https://docs.rs/http_unix_client"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85.0"
include = [
    "README.md",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**/*.rs",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.playground]
features = ["cookie", "json"]

[features]
charset = []
cookies = ["dep:cookie"]
default = ["charset"]
json = ["dep:serde_json"]

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
cookie = { version = "0.18.1", optional = true }
encoding_rs = "0.8.35"
hex = "0.4.3"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client"] }
hyper-util = { version = "0.1.16", features = ["tokio"] }
hyperlocal = "0.9.1"
mime = "0.3.17"
serde = "1.0.219"
serde_json = { version = "1.0.141", optional = true }
serde_urlencoded = "0.7.1"
thiserror = "2.0.12"
url = "2.5.4"

[dev-dependencies]
actix-web = { version = "4.11.0", features = ["cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
